Again broke the app module by moving workflow related code into its own module
Signed-off-by: barracuda <dimitrijchannel@gmail.com>